--- a/_posts/2015-02-20-Scary.md
+++ b/_posts/2015-02-20-Scary.md
@@ -5,7 +5,7 @@ author: Jarrett Spiker
 ---
 
 Hello there brave reader. There are going to be a lot of questions on the coming post, but I want to start off with a simple one: have you ever written a program before?
-If no, then this post is for you. Don’t worry, it’s not a sales pitch, or anything close to a tutorial. There is no need to be afraid! No technical material will follow, I promise. In fact, this post, while still about programming, is just about the opposite of technical. 
+If no, then this post is for you. Don’t worry, it’s not a sales pitch, or anything close to a tutorial. There is no need to be afraid! No technical material will follow, I promise. In fact, this post, while still about programming, is just about the opposite of technical.
 
 When people think about *‘computer programming’*  a few images seem to come to mind. A screen glowing with a wall of undecipherable text. Some lanky coffee-addled guy holding his head as he stares at it. In fact, at the time of writing this, out of the first 15 images shown by a Google Image search of ‘Computer Programming’, 14 of them are stylized pictures of either source code or binary (ones and zeros). Doing the same with the term ‘Computer Programmer’ and filtering out the pictures without any people in them, of the first 36 images, 31 are of a Caucasian male sitting at a desk (I went to 36 so that I could include a picture of Tony Stark in that statistic).
 
@@ -63,6 +63,6 @@ I could go on, and I will in a future post, but for right now, I will end off wi
 
 And, if you don’t want to have to worry about semicolons and tabs, or even lines of text, the resource I recommend to you is [Waterbear][]. It allows you to code with blocks, instead of with words, and we, the Waterbear team, are constantly working to make it a more effective and intuitive learning tool. Go, see what you can make it do. See if you can use it to write your name, or to draw a picture, or to solve some math problem. Whatever you like. The important part, cliché as it sounds, is that you enjoy yourself. Because, unlike memorization, or staring blankly at a computer screen, programming should be fun.
 
-—Jarrett
+—-Jarrett
 
 [Waterbear]: http://waterbearlang.com/
