--- a/_posts/2015-04-04-Testing.md
+++ b/_posts/2015-04-04-Testing.md
@@ -71,7 +71,7 @@ acceptance testing.
 
 This is probably what most people refer to when they're talking about
 "the tests". It might be that you think unit testing is the only kind of
-testing that is considered to be Real Testing™ (spoilers: nope). 
+testing that is considered to be Real Testing™ (spoilers: nope).
 
 Unit tests are all about:
 
@@ -493,3 +493,5 @@ a ~ img {
   margin: 0;
 }
 </style>
+
+--Eddie
