--- a/_posts/2015-10-18-Blocks.md
+++ b/_posts/2015-10-18-Blocks.md
@@ -1,6 +1,7 @@
 ---
 layout: post
 title: Working with Waterbear Blocks
+author: David Buss
 ---
 
 I figured now that I have been working with waterbear for a few weeks it was time for me to write a blog detailing how waterbears block structure works. When I first got into working with waterbear I found it quite daunting to figure out all the steps a block has, from creation to where the code for the block runs. I will be going through a simple example that you can feel free to add to the open source code that is available at github.com.
@@ -19,17 +20,17 @@ We now have a our nice new foo block within the menu we just created. The code b
 
 ![MenuWithBlock]({{ site.baseurl }}/images/newBlocks/MenuWithBlock.png)
 
-Now we have a shiny new block but it doesnt do anything yet. Within the wb-step there is an attribute fn. This is the function that will run when the script is converted and run. We haven't created this function yet so thats what we will do next. 
+Now we have a shiny new block but it doesnt do anything yet. Within the wb-step there is an attribute fn. This is the function that will run when the script is converted and run. We haven't created this function yet so thats what we will do next.
 
 All the functions that we create are kept in runtime.js file. The convention for waterbear is to keep the functions for this section in alphabetical order so that they are easier to find. We can create a new section for these functions to keep everything nice and neat.
 
 ![RunTimeFunctionCode]({{ site.baseurl }}/images/newBlocks/RuntimeFunction.png)
 
-Foo is the handler that is used for finding the functions. The script in runtime knows where to look for the function based on this tag. This why we give the element an "ns" attribute. Building the function itself is pretty easy. We just use the existing libraries from our code base or the builtin browser functions. In this case we have our own function called getContext. This selects the element that our code will be run in (the playground) and then does a fillText operation which is a builtin function for the browser. 
+Foo is the handler that is used for finding the functions. The script in runtime knows where to look for the function based on this tag. This why we give the element an "ns" attribute. Building the function itself is pretty easy. We just use the existing libraries from our code base or the builtin browser functions. In this case we have our own function called getContext. This selects the element that our code will be run in (the playground) and then does a fillText operation which is a builtin function for the browser.
 
 We now have a perfectly working block that will print the word foo to the location we give it. We used all existing elements so all the fancy drag and drop functionality is already implemented for our new blocks because of the prototypes set up in waterbear. If you want to take a look at these functions they are within the block.js file. This allows us to do all the transposing during dragging and cloning of blocks and so forth.
 
 Now that you have all the know how, you can go and make some exciting new blocks for waterbear!!
 Have fun.
 
--David
+--David
